<resources>
    <string name="app_name">农技耘</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- activity_main -->
    <string name="home_first">首页</string>
    <string name="home_tt">知识库</string>
    <string name="home_que">快速提问</string>
    <string name="home_exc">交流</string>
    <string name="home_me">我的</string>

    <!-- fragment_first -->
    <string name="first_search">请输入查询内容</string>

    <!-- fragment_que -->
    <string name="que_ask">快速提问</string>
    <string name="que_type">选择类型</string>
    <string name="que_hint">上传图片或15秒微视频（最多9张图片）</string>
    <string name="que_photo">图片</string>
    <string name="que_video">视频</string>
    <string name="que_submit">提交</string>

    <!-- fragment_exc -->
    <string name="exc_ask">交流</string>

    <!-- fragment_tt -->
    <string name="tt_title">知识库</string>
    <string name="tt_varieties">作物品种库</string>
    <string name="tt_protect">植物保护库</string>
    <string name="tt_livestock">畜禽品种库</string>
    <string name="tt_main">主推技术库</string>


    <!-- activity_login -->
    <string name="login_phone">请填写注册手机号</string>
    <string name="login_pass">请输入密码</string>
    <string name="login_btn1">登录</string>
    <string name="login_forget">忘记密码？</string>
    <string name="login_num">还没有账号？</string>
    <string name="login_btn2">现在注册</string>
    <string name="login_q">快捷登录</string>

    <!-- activity_psw_forget -->
    <string name="forget_psw">忘记密码</string>
    <string name="forget_phone">请输入手机号码</string>
    <string name="forget_get">获取验证码</string>
    <string name="forget_hint">请输入验证码</string>
    <string name="forget_btn">下一步</string>

    <!-- activity_psw_new -->
    <string name="new_psw">重置密码</string>
    <string name="new_phone">请输入密码</string>
    <string name="new_again">再次输入密码</string>
    <string name="new_btn">下一步</string>
    <string name="new_login">登录密码</string>
    <string name="new_login_again">密码确认</string>

    <!-- fragment_agricultural_policy -->
    <string name="policy_title">农业政策</string>

    <!-- activity_register -->
    <string name="register_title">用户注册</string>
    <string name="register_user">用 户 名</string>
    <string name="register_user2">姓名</string>
    <string name="register_phone">手    机</string>
    <string name="register_phone_num">手机号码</string>
    <string name="register_psw">密    码</string>
    <string name="register_psw2">密码</string>
    <string name="register_sure_psw">确认密码</string>
    <string name="register_sure_again">再次输入密码</string>

    <!-- fragment_me -->
    <string name="me_me">我的</string>
    <string name="me_collect">我的收藏</string>
    <string name="me_integral">积分商城</string>
    <string name="me_day">每日签到</string>
    <string name="me_setting">系统设置</string>
    <string name="me_ask">我的提问</string>
    <string name="me_ans">我的问答</string>
    <string name="me_exc">我的交流</string>
    <string name="me_think">意见反馈</string>

    <!-- fragment_market -->
    <string name="market_price">价格行情</string>
    <string name="market_focus">市场聚焦</string>
    <string name="market_info">江苏省农产品价格信息</string>
    <string name="market_tag">》</string>

</resources>
