<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_green"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/new_psw"
            android:textSize="23sp"
            android:textColor="@color/app_text"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_login"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et__forget_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/new_phone"
            android:paddingStart="7dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_login_again"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/et__new_again"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@null"
            android:hint="@string/new_again"
            android:paddingStart="7dp" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/app_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radius_green"
            android:text="@string/new_btn"
            android:textColor="@color/app_text" />
    </LinearLayout>


</LinearLayout>