<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VerificationActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/app_green"
        android:orientation="horizontal">

        <TextView
            style="@style/app_top_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="验证手机号" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/forget_phone" />

        <Button
            android:id="@+id/bt_post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@id/et_phone"
            android:background="@drawable/btn_radius_green"
            android:text="@string/forget_get"
            android:textColor="@color/app_text" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="10dp">

        <EditText
            android:id="@+id/et_ver"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/forget_hint" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="25dp">

        <Button
            android:id="@+id/tb_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_radius_green"
            android:text="@string/forget_btn"
            android:textColor="@color/app_text" />

    </LinearLayout>

</LinearLayout>