<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e6e6e6"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/app_green"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/ask_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_gravity="center_vertical"
                android:src="@mipmap/btn_back_normal" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/que_ask"
                style="@style/app_top_title" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_text"
            android:paddingBottom="10dp"
            android:paddingLeft="25dp"
            android:paddingTop="10dp">

            <TextView
                style="@style/app_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="1.4"
                android:paddingTop="5dp"
                android:textColor="#000000"
                android:text="@string/que_type" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.1"
                android:paddingTop="5dp"
                android:text="@string/market_tag" />
        </LinearLayout>

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dip"
            android:background="@color/app_view" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="15dp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:background="@color/app_text" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/que_hint" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="20dp">

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@mipmap/btn_pressed_normal"
                    android:gravity="center"
                    android:text="@string/que_photo" />

                <RadioButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:button="@null"
                    android:drawableTop="@mipmap/btn_video_pressed"
                    android:gravity="center"
                    android:text="@string/que_video" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dp">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_radius_green"
                    android:text="@string/que_ask"
                    android:textColor="@color/app_text" />

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>